--- a/src/app/components/weather/CurrentConditions.css
+++ b/src/app/components/weather/CurrentConditions.css
@@ -7,8 +7,7 @@
 .mainConditions {
   align-items: center;
   display: flex;
-  flex-basis: 60%;
-  margin: .8em 0 0;
+  flex: 0 0 60%;
 }
 
 .mainConditionsIcon {
