changed styles for Header
Header: cut text when overflowing

--- a/src/app/components/widget/Header.css
+++ b/src/app/components/widget/Header.css
@@ -20,4 +20,7 @@
 
 h1.headerText { /* for the sake of increasing of specifity */
   margin: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
