--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1,6 +1,8 @@
 @import "@jetbrains/ring-ui/components/global/variables.css";
+@import "./variables.css";
 
 @value unit from "@jetbrains/ring-ui/components/global/global.css";
+@value s-screen-width, s-screen-height, m-screen-width, m-screen-height from "./variables.css";
 
 :global(.widget-body) {
   margin: 0;
@@ -49,6 +51,18 @@
   flex-direction: column;
   flex-grow: 1;
   height: 100%;
+
+  @media m-screen-height {
+    & > div:first-child {
+      margin-bottom: unit;
+    }
+  }
+
+  @media s-screen-height, s-screen-width {
+    & > div:first-child {
+      display: none;
+    }
+  }
 }
 
 /* no selector for tab content element, proprietary design */
@@ -59,16 +73,62 @@
   overflow-y: auto;
 }
 
+.locationHeader {
+  @media s-screen-height {
+    & {
+      display: none;
+    }
+  }
+}
+
 .todayTab {
   display: flex;
   flex-direction: column;
   height: 100%;
 }
 
+.todayTabTime,
+.tomorrowTabTime {
+  @media s-screen-height {
+    & {
+      display: none;
+    }
+  }
+}
+
+.tomorrowTabTime,
+.fiveDaysTabTime {
+  @media s-screen-width {
+    & {
+      display: none;
+    }
+  }
+}
+
 .todayTabCurrentConditions {
   flex-basis: 70%;
+
+  @media s-screen-width, s-screen-height, m-screen-height {
+    & {
+      flex-basis: 100%;
+    }
+  }
+}
+
+.todayTabCurrentConditionsTime {
+  @media s-screen-width {
+    & {
+      display: none;
+    }
+  }
 }
 
 .todayTabDailyForecast {
   flex-basis: 30%;
+
+  @media s-screen-height, m-screen-height {
+    & {
+      display: none !important;
+    }
+  }
 }
