--- a/src/app/components/weather/HourlyForecast.css
+++ b/src/app/components/weather/HourlyForecast.css
@@ -1,22 +1,18 @@
-:root {
-  --forecast-icon-size: 2.8em;
-}
-
 .forecast {
   align-items: center;
   color: #333;
   display: flex;
   flex-direction: column;
+  font-size: 1em;
+  line-height: 1;
 }
 
 .forecastIcon {
-  height: var(--forecast-icon-size);
   margin-bottom: -.5em;
   margin-top: -.2em;
-  width: var(--forecast-icon-size);
+  width: 100%;
 }
 
 .forecastTime {
-  line-height: 1;
   white-space: nowrap;
 }
