--- a/src/app/components/weather/WeatherIcon.css
+++ b/src/app/components/weather/WeatherIcon.css
@@ -1,3 +1,10 @@
+@import "../../variables.css";
+
+.weatherIcon {
+  max-width: var(--weather-icon-size);
+  max-height: var(--weather-icon-size);
+}
+
 .weatherIcon:hover {
   animation: pulse 700ms linear 0s infinite alternate;
 }
@@ -7,6 +14,6 @@
     transform: scale(1);
   }
   100% {
-    transform: scale(1.2);
+    transform: scale(1.1);
   }
 }
